--- a/index.html
+++ b/index.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VeggieCook - Delicious Vegetarian Recipes & Plant-Based Cooking</title>
-    <meta name="description" content="Discover amazing vegetarian recipes, plant-based alternatives, and convert non-vegetarian dishes. Explore global cuisines with our collection of healthy, delicious vegetarian cooking." />
-    <meta name="keywords" content="vegetarian recipes, plant-based cooking, vegan alternatives, healthy recipes, vegetarian cuisine, meat substitutes, plant-based meals" />
+    <title>VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking</title>
+    <meta
+      name="description"
+      content="VeggieCook offers easy vegetarian recipes, healthy plant-based meals, and creative vegan alternatives. Discover global cuisines, meat substitutes, and delicious vegetarian cooking ideas."
+    />
+    <meta
+      name="keywords"
+      content="vegetarian recipes, vegan recipes, plant-based meals, healthy vegetarian cooking, meat substitutes, vegan alternatives, VeggieCook"
+    />
     <meta name="author" content="VeggieCook" />
-    <link rel="canonical" href="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com" />
+    <link
+      rel="canonical"
+      href="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com" />
-    <meta property="og:title" content="VeggieCook - Delicious Vegetarian Recipes & Plant-Based Cooking" />
-    <meta property="og:description" content="Discover amazing vegetarian recipes, plant-based alternatives, and convert non-vegetarian dishes. Explore global cuisines with our collection of healthy, delicious vegetarian cooking." />
-    <meta property="og:image" content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg" />
+    <meta
+      property="og:url"
+      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+    />
+    <meta
+      property="og:title"
+      content="VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking"
+    />
+    <meta
+      property="og:description"
+      content="Explore VeggieCook's collection of healthy vegetarian recipes, vegan dishes, and plant-based cooking guides. Learn how to turn non-veg recipes into tasty vegetarian alternatives."
+    />
+    <meta
+      property="og:image"
+      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg"
+    />
     <meta property="og:site_name" content="VeggieCook" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com" />
-    <meta name="twitter:title" content="VeggieCook - Delicious Vegetarian Recipes & Plant-Based Cooking" />
-    <meta name="twitter:description" content="Discover amazing vegetarian recipes, plant-based alternatives, and convert non-vegetarian dishes. Explore global cuisines with our collection of healthy, delicious vegetarian cooking." />
-    <meta name="twitter:image" content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg" />
+    <meta
+      name="twitter:url"
+      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+    />
+    <meta
+      name="twitter:title"
+      content="VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover vegetarian recipes, plant-based alternatives, and global cuisines with VeggieCook. Learn how to cook healthy, delicious vegetarian meals easily."
+    />
+    <meta
+      name="twitter:image"
+      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg"
+    />
 
     <!-- Additional SEO -->
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
     <meta name="theme-color" content="#22c55e" />
-    
-    <!-- Performance -->
+
+    <!-- Favicon (improves SEO and branding) -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Performance optimizations -->
     <link rel="preload" as="image" href="/src/assets/hero-veggie-bowl.jpg" />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
 
   <body>
