--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking</title>
+    <title>Veggie Heaven | Easy Vegetarian Recipes & Plant-Based Cooking</title>
     <meta
       name="description"
       content="VeggieCook offers easy vegetarian recipes, healthy plant-based meals, and creative vegan alternatives. Discover global cuisines, meat substitutes, and delicious vegetarian cooking ideas."
     />
     <meta
       name="keywords"
-      content="vegetarian recipes, vegan recipes, plant-based meals, healthy vegetarian cooking, meat substitutes, vegan alternatives, VeggieCook"
+      content="vegetarian recipes, vegan recipes, plant-based meals, healthy vegetarian cooking, meat substitutes, vegan alternatives, Veggie Heaven"
     />
-    <meta name="author" content="VeggieCook" />
+    <meta name="author" content="Veggie Heaven" />
     <link
       rel="canonical"
       href="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
@@ -27,17 +27,17 @@
     />
     <meta
       property="og:title"
-      content="VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking"
+      content="Veggie Heaven | Easy Vegetarian Recipes & Plant-Based Cooking"
     />
     <meta
       property="og:description"
-      content="Explore VeggieCook's collection of healthy vegetarian recipes, vegan dishes, and plant-based cooking guides. Learn how to turn non-veg recipes into tasty vegetarian alternatives."
+      content="Explore Veggie Heaven's collection of healthy vegetarian recipes, vegan dishes, and plant-based cooking guides. Learn how to turn non-veg recipes into tasty vegetarian alternatives."
     />
     <meta
       property="og:image"
       content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg"
     />
-    <meta property="og:site_name" content="VeggieCook" />
+    <meta property="og:site_name" content="Veggie Heaven" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -47,7 +47,7 @@
     />
     <meta
       name="twitter:title"
-      content="VeggieCook | Easy Vegetarian Recipes & Plant-Based Cooking"
+      content="Veggie Heaven | Easy Vegetarian Recipes & Plant-Based Cooking"
     />
     <meta
       name="twitter:description"
