--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easy Vegetarian Dinner Recipes for Beginners | Veggie Heaven</title>
+    <title>Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
     <meta
       name="description"
-      content="Easy vegetarian dinner recipes for beginners, healthy plant-based meal prep ideas, and quick vegan protein-rich recipes. Budget-friendly vegetarian family meals with step-by-step instructions."
+      content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and healthy zucchini noodle meals. Perfect vegetarian dinner ideas for beginners and busy weeknights."
     />
     <meta
       name="keywords"
-      content="easy vegetarian dinner recipes for beginners, healthy plant based meal prep ideas, quick vegan protein rich recipes, gluten free vegetarian comfort food, budget friendly vegetarian family meals, high protein vegetarian recipes weight loss, one pot vegetarian meals busy weeknights, creamy lentil bolognese pasta recipe vegan, authentic chickpea tikka masala indian vegetarian, restaurant style palak paneer spinach curry"
+      content="spicy vegetarian lentil curry recipe, easy vegan chickpea salad wrap, healthy vegetarian stuffed bell peppers, quick plant based pasta with spinach, vegan cauliflower rice stir fry recipe, one pot vegetarian mushroom barley soup, easy vegan zucchini noodle recipes, vegetarian sweet potato chickpea curry, plant based breakfast smoothie with oats, vegan roasted eggplant dip recipe"
     />
     <meta name="author" content="Veggie Heaven" />
     <link
       rel="canonical"
-      href="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+      href="https://veggie-heaven.vercel.app/"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+      content="https://veggie-heaven.vercel.app/"
     />
     <meta
       property="og:title"
-      content="Easy Vegetarian Dinner Recipes for Beginners | Veggie Heaven"
+      content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
     />
     <meta
       property="og:description"
-      content="Discover 100+ easy vegetarian dinner recipes for beginners, healthy plant-based meal prep ideas, and quick vegan protein-rich recipes. Perfect for busy weeknights!"
+      content="Try easy vegetarian recipes like spicy lentil curry, vegan wraps, and quick one-pot meals. Perfect healthy dinner ideas for plant-based beginners."
     />
     <meta
       property="og:image"
-      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg"
+      content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg"
     />
     <meta property="og:site_name" content="Veggie Heaven" />
 
@@ -43,19 +43,19 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:url"
-      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/"
+      content="https://veggie-heaven.vercel.app/"
     />
     <meta
       name="twitter:title"
-      content="Easy Vegetarian Dinner Recipes for Beginners | Veggie Heaven"
+      content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
     />
     <meta
       name="twitter:description"
-      content="Discover 100+ easy vegetarian dinner recipes for beginners, healthy plant-based meal prep ideas, and quick vegan protein-rich recipes. Perfect for busy weeknights!"
+      content="Easy plant-based recipes: spicy vegetarian lentil curry, vegan chickpea wraps, and more beginner-friendly vegetarian dinners."
     />
     <meta
       name="twitter:image"
-      content="https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/hero-veggie-bowl.jpg"
+      content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg"
     />
 
     <!-- JSON-LD Structured Data -->
@@ -64,11 +64,11 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Veggie Heaven",
-      "description": "Easy vegetarian dinner recipes for beginners, healthy plant-based meal prep ideas, and quick vegan protein-rich recipes",
-      "url": "https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com",
+      "description": "Easy plant-based recipes like spicy vegetarian lentil curry, vegan wraps, and healthy dinner ideas for beginners.",
+      "url": "https://veggie-heaven.vercel.app",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/search?q={search_term_string}",
+        "target": "https://veggie-heaven.vercel.app/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       },
       "publisher": {
@@ -76,7 +76,7 @@
         "name": "Veggie Heaven",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://5ccf5f4d-ee46-4abf-9659-6cab3862580f.lovableproject.com/favicon.png"
+          "url": "https://veggie-heaven.vercel.app/favicon.png"
         }
       }
     }
