--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
+    <title>Veggie Heaven | Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes</title>
     <meta
       name="description"
       content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and healthy zucchini noodle meals. Perfect vegetarian dinner ideas for beginners and busy weeknights."
