--- a/index.html
+++ b/index.html
@@ -4,103 +4,58 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Veggie Heaven | Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes</title>
+    <!-- Optimized title (keeps brand + primary keywords) -->
+    <title>Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
+
+    <!-- Optimized description (150-160 chars) -->
     <meta
       name="description"
-      content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and healthy zucchini noodle meals. Perfect vegetarian dinner ideas for beginners and busy weeknights."
+      content="Discover easy plant-based recipes — spicy vegetarian lentil curry, vegan chickpea wraps, one-pot soups and beginner-friendly vegetarian dinners."
     />
+
+    <!-- Canonical + hreflang -->
+    <link rel="canonical" href="https://veggie-heaven.vercel.app/" />
+    <link rel="alternate" hreflang="en" href="https://veggie-heaven.vercel.app/" />
+
+    <!-- Keywords (kept to those from the web app) -->
     <meta
       name="keywords"
       content="spicy vegetarian lentil curry recipe, easy vegan chickpea salad wrap, healthy vegetarian stuffed bell peppers, quick plant based pasta with spinach, vegan cauliflower rice stir fry recipe, one pot vegetarian mushroom barley soup, easy vegan zucchini noodle recipes, vegetarian sweet potato chickpea curry, plant based breakfast smoothie with oats, vegan roasted eggplant dip recipe"
     />
-    <meta name="author" content="Veggie Heaven" />
-    <link
-      rel="canonical"
-      href="https://veggie-heaven.vercel.app/"
-    />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Author / publisher -->
+    <meta name="author" content="Veggie Heaven" />
+
+    <!-- Social Open Graph -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://veggie-heaven.vercel.app/"
-    />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:url" content="https://veggie-heaven.vercel.app/" />
     <meta
       property="og:title"
-      content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
+      content="Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
     />
     <meta
       property="og:description"
-      content="Try easy vegetarian recipes like spicy lentil curry, vegan wraps, and quick one-pot meals. Perfect healthy dinner ideas for plant-based beginners."
+      content="Discover easy plant-based recipes — spicy vegetarian lentil curry, vegan chickpea wraps, and quick one-pot meals for beginners."
     />
-    <meta
-      property="og:image"
-      content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg"
-    />
+    <meta property="og:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
+    <!-- (Optionally include og:image:width and og:image:height if known) -->
     <meta property="og:site_name" content="Veggie Heaven" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:url"
-      content="https://veggie-heaven.vercel.app/"
-    />
+    <meta name="twitter:url" content="https://veggie-heaven.vercel.app/" />
     <meta
       name="twitter:title"
-      content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
+      content="Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
     />
     <meta
       name="twitter:description"
       content="Easy plant-based recipes: spicy vegetarian lentil curry, vegan chickpea wraps, and more beginner-friendly vegetarian dinners."
     />
-    <meta
-      name="twitter:image"
-      content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg"
-    />
+    <meta name="twitter:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
 
-    <!-- JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Veggie Heaven",
-      "description": "Easy plant-based recipes like spicy vegetarian lentil curry, vegan wraps, and healthy dinner ideas for beginners.",
-      "url": "https://veggie-heaven.vercel.app",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://veggie-heaven.vercel.app/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "Veggie Heaven",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://veggie-heaven.vercel.app/favicon.png"
-        }
-      }
-    }
-    </script>
-
-    <!-- Additional SEO -->
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <meta name="googlebot" content="index, follow" />
-    <meta name="theme-color" content="#22c55e" />
-
-    <!-- Favicon (improves SEO and branding) -->
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <meta name="msapplication-TileImage" content="/favicon.png" />
-
-    <!-- Performance optimizations -->
+    <!-- Performance / Resource hints -->
     <link rel="preload" as="image" href="/src/assets/hero-veggie-bowl.jpg" />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+    <link rel="preconnect" href="https://fonts.googleapis.com" cro
