--- a/index.html
+++ b/index.html
@@ -4,58 +4,94 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Optimized title (keeps brand + primary keywords) -->
-    <title>Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
+    <title>Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
 
-    <!-- Optimized description (150-160 chars) -->
     <meta
       name="description"
-      content="Discover easy plant-based recipes — spicy vegetarian lentil curry, vegan chickpea wraps, one-pot soups and beginner-friendly vegetarian dinners."
+      content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and healthy zucchini noodle meals. Perfect vegetarian dinner ideas for beginners and busy weeknights."
     />
 
-    <!-- Canonical + hreflang -->
-    <link rel="canonical" href="https://veggie-heaven.vercel.app/" />
-    <link rel="alternate" hreflang="en" href="https://veggie-heaven.vercel.app/" />
+    <!-- Long-tailed niche keywords (only phrases from the web app content) -->
+    <meta name="keywords" content="
+      spicy vegetarian lentil curry recipe,
+      easy plant-based recipes for beginners,
+      vegan chickpea salad wrap recipe,
+      quick vegan chickpea wraps for lunch,
+      healthy vegetarian stuffed bell peppers recipe,
+      quick plant based pasta with spinach recipe,
+      vegan cauliflower rice stir fry recipe,
+      one pot vegetarian mushroom barley soup recipe,
+      easy vegan zucchini noodle recipes for beginners,
+      vegetarian sweet potato chickpea curry recipe,
+      plant based breakfast smoothie with oats recipe,
+      vegan roasted eggplant dip recipe,
+      beginner-friendly vegetarian dinners,
+      easy vegetarian recipes for busy weeknights,
+      spicy lentil curry for beginners,
+      quick vegan chickpea wraps recipe
+    " />
 
-    <!-- Keywords (kept to those from the web app) -->
-    <meta
-      name="keywords"
-      content="spicy vegetarian lentil curry recipe, easy vegan chickpea salad wrap, healthy vegetarian stuffed bell peppers, quick plant based pasta with spinach, vegan cauliflower rice stir fry recipe, one pot vegetarian mushroom barley soup, easy vegan zucchini noodle recipes, vegetarian sweet potato chickpea curry, plant based breakfast smoothie with oats, vegan roasted eggplant dip recipe"
-    />
-
-    <!-- Author / publisher -->
     <meta name="author" content="Veggie Heaven" />
+    <link rel="canonical" href="https://veggie-heaven.vercel.app/" />
 
-    <!-- Social Open Graph -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="https://veggie-heaven.vercel.app/" />
-    <meta
-      property="og:title"
-      content="Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
-    />
-    <meta
-      property="og:description"
-      content="Discover easy plant-based recipes — spicy vegetarian lentil curry, vegan chickpea wraps, and quick one-pot meals for beginners."
-    />
+    <meta property="og:title" content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven" />
+    <meta property="og:description" content="Try easy vegetarian recipes like spicy lentil curry, vegan wraps, and quick one-pot meals. Perfect healthy dinner ideas for plant-based beginners." />
     <meta property="og:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
-    <!-- (Optionally include og:image:width and og:image:height if known) -->
     <meta property="og:site_name" content="Veggie Heaven" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://veggie-heaven.vercel.app/" />
-    <meta
-      name="twitter:title"
-      content="Spicy Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven"
-    />
-    <meta
-      name="twitter:description"
-      content="Easy plant-based recipes: spicy vegetarian lentil curry, vegan chickpea wraps, and more beginner-friendly vegetarian dinners."
-    />
+    <meta name="twitter:title" content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven" />
+    <meta name="twitter:description" content="Easy plant-based recipes: spicy vegetarian lentil curry, vegan chickpea wraps, and more beginner-friendly vegetarian dinners." />
     <meta name="twitter:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
 
-    <!-- Performance / Resource hints -->
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Veggie Heaven",
+      "description": "Easy plant-based recipes like spicy vegetarian lentil curry, vegan wraps, and healthy dinner ideas for beginners.",
+      "url": "https://veggie-heaven.vercel.app",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://veggie-heaven.vercel.app/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Veggie Heaven",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://veggie-heaven.vercel.app/favicon.png"
+        }
+      }
+    }
+    </script>
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="theme-color" content="#22c55e" />
+
+    <!-- Favicon (improves SEO and branding) -->
+    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <meta name="msapplication-TileImage" content="/favicon.png" />
+
+    <!-- Performance optimizations -->
     <link rel="preload" as="image" href="/src/assets/hero-veggie-bowl.jpg" />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" cro
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
