--- a/index.html
+++ b/index.html
@@ -1,97 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic SEO -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <meta
-      name="description"
-      content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and healthy zucchini noodle meals. Perfect vegetarian dinner ideas for beginners and busy weeknights."
-    />
+    <title>Spicy Vegetarian Lentil Curry | Veggie Heaven</title>
+    <meta name="description" content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and one-pot soups — beginner-friendly vegetarian dinners." />
 
-    <!-- Long-tailed niche keywords (only phrases from the web app content) -->
-    <meta name="keywords" content="
-      spicy vegetarian lentil curry recipe,
-      easy plant-based recipes for beginners,
-      vegan chickpea salad wrap recipe,
-      quick vegan chickpea wraps for lunch,
-      healthy vegetarian stuffed bell peppers recipe,
-      quick plant based pasta with spinach recipe,
-      vegan cauliflower rice stir fry recipe,
-      one pot vegetarian mushroom barley soup recipe,
-      easy vegan zucchini noodle recipes for beginners,
-      vegetarian sweet potato chickpea curry recipe,
-      plant based breakfast smoothie with oats recipe,
-      vegan roasted eggplant dip recipe,
-      beginner-friendly vegetarian dinners,
-      easy vegetarian recipes for busy weeknights,
-      spicy lentil curry for beginners,
-      quick vegan chickpea wraps recipe
-    " />
+    <!-- Keywords (mix of long-tail + short-tail from site content) -->
+    <meta name="keywords" content="spicy vegetarian lentil curry recipe, lentil curry, plant-based recipes, vegan chickpea wrap recipe, stuffed bell peppers recipe, one pot mushroom barley soup, zucchini noodle recipes, sweet potato chickpea curry, breakfast smoothie with oats, roasted eggplant dip, vegetarian dinner ideas" />
 
-    <meta name="author" content="Veggie Heaven" />
     <link rel="canonical" href="https://veggie-heaven.vercel.app/" />
+    <link rel="alternate" hreflang="en" href="https://veggie-heaven.vercel.app/" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="Spicy Vegetarian Lentil Curry | Veggie Heaven" />
+    <meta property="og:description" content="Easy plant-based recipes: spicy lentil curry, vegan wraps and quick one-pot meals." />
     <meta property="og:url" content="https://veggie-heaven.vercel.app/" />
-    <meta property="og:title" content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven" />
-    <meta property="og:description" content="Try easy vegetarian recipes like spicy lentil curry, vegan wraps, and quick one-pot meals. Perfect healthy dinner ideas for plant-based beginners." />
     <meta property="og:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
     <meta property="og:site_name" content="Veggie Heaven" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://veggie-heaven.vercel.app/" />
-    <meta name="twitter:title" content="Spicy Vegetarian Lentil Curry & Easy Plant-Based Recipes | Veggie Heaven" />
-    <meta name="twitter:description" content="Easy plant-based recipes: spicy vegetarian lentil curry, vegan chickpea wraps, and more beginner-friendly vegetarian dinners." />
+    <meta name="twitter:title" content="Spicy Vegetarian Lentil Curry | Veggie Heaven" />
+    <meta name="twitter:description" content="Easy plant-based recipes: spicy lentil curry, vegan wraps, and quick one-pot meals." />
     <meta name="twitter:image" content="https://veggie-heaven.vercel.app/hero-veggie-bowl.jpg" />
 
-    <!-- JSON-LD Structured Data -->
+    <!-- Performance / resource hints -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="image" href="/src/assets/hero-veggie-bowl.jpg" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Sitemap hint -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+    <!-- JSON-LD (site + organization + basic homepage) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Veggie Heaven",
-      "description": "Easy plant-based recipes like spicy vegetarian lentil curry, vegan wraps, and healthy dinner ideas for beginners.",
-      "url": "https://veggie-heaven.vercel.app",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://veggie-heaven.vercel.app/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "Veggie Heaven",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://veggie-heaven.vercel.app/favicon.png"
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "name": "Veggie Heaven",
+          "url": "https://veggie-heaven.vercel.app/",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://veggie-heaven.vercel.app/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@type": "Organization",
+          "name": "Veggie Heaven",
+          "url": "https://veggie-heaven.vercel.app/",
+          "logo": { "@type": "ImageObject", "url": "https://veggie-heaven.vercel.app/favicon.png" }
         }
-      }
+      ]
     }
     </script>
 
-    <!-- Additional SEO -->
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <meta name="googlebot" content="index, follow" />
+    <!-- Defer main JS (critical rendering path) -->
+    <script type="module" defer src="/src/main.tsx"></script>
     <meta name="theme-color" content="#22c55e" />
-
-    <!-- Favicon (improves SEO and branding) -->
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <meta name="msapplication-TileImage" content="/favicon.png" />
-
-    <!-- Performance optimizations -->
-    <link rel="preload" as="image" href="/src/assets/hero-veggie-bowl.jpg" />
-    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-
   <body>
+    <noscript>
+      <div style="padding:20px;font-family:Arial, sans-serif;">
+        <h1>Spicy Vegetarian Lentil Curry &amp; Easy Plant-Based Recipes</h1>
+        <p>Discover easy plant-based recipes like spicy lentil curry, vegan chickpea wraps, and one-pot soups.</p>
+      </div>
+    </noscript>
+
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
