--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Spicy Vegetarian Lentil Curry | Veggie Heaven</title>
+    <title>Veggie Heaven | Vegetarian Alternative Recipes</title>
     <meta name="description" content="Discover easy plant-based recipes like spicy vegetarian lentil curry, quick vegan chickpea wraps, and one-pot soups — beginner-friendly vegetarian dinners." />
 
     <!-- Keywords (mix of long-tail + short-tail from site content) -->
