--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="hcqZIGqIK1x1HiLlQ53BBZpgAS_DaTG5kdlydmw9PDQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Veggie Heaven | Vegetarian Alternative Recipes</title>
     <meta
